--- a/css/screen.css
+++ b/css/screen.css
@@ -1,105 +1,123 @@
+/* image replacement */
+.graphic, #prevBtn, #nextBtn, #slider1prev, #slider1next {
+    margin: 0;
+    padding: 0;
+    display: block;
+    overflow: hidden;
+    text-indent: -8000px;
+}
 
-    /* image replacement */
-        .graphic, #prevBtn, #nextBtn, #slider1prev, #slider1next{
-            margin:0;
-            padding:0;
-            display:block;
-            overflow:hidden;
-            text-indent:-8000px;
-            }
-    /* // image replacement */
-			
-	#container{	
-		margin:0 auto;
-		position:relative;
-		text-align:left;
-		width:960px;
-		background:#fff;		
-		margin-bottom:2em;
-		direction:ltr
-		}	
-	#header{
-		height:80px;
-		line-height:80px;
-		background:#5DC9E1;
-		color:#fff;
-		}				
-	#content{
-		position:relative;
-		}			
+/* // image replacement */
+
+#container {
+    margin: 0 auto;
+    position: relative;
+    text-align: left;
+    width: 960px;
+    background: #fff;
+    margin-bottom: 2em;
+    direction: ltr
+}
+
+#header {
+    height: 80px;
+    line-height: 80px;
+    background: #5DC9E1;
+    color: #fff;
+}
+
+#content {
+    position: relative;
+}
 
 /* Easy Slider */
 
-	#slider ul, #slider li,
-	#slider2 ul, #slider2 li{
-		margin:0;
-		padding:0;
-		list-style:none;
-		}
-	#slider2{margin-top:1em;}
-	#slider li, #slider2 li{ 
-		/* 
-			define width and height of list item (slide)
-			entire slider area will adjust according to the parameters provided here
-		*/ 
-		width:960px;
-		height:198px;
-		overflow:hidden; 
-		}	
-	#prevBtn, #nextBtn,
-	#slider1next, #slider1prev{ 
-		display:block;
-		width:11px;
-		height:17px;
-		position:absolute;
-		left:15px;
-		top:90px;
-		z-index:1000;
-		}	
-	#nextBtn, #slider1next{ 
-		left:935px;
-		}														
-	#prevBtn a, #nextBtn a,
-	#slider1next a, #slider1prev a{  
-		display:block;
-		position:relative;
-		width:11px;
-		height:17px;
-		background:url(../images/arrow_left.png) no-repeat 0 0;
-		}	
-	#nextBtn a, #slider1next a{ 
-		background:url(../images/arrow_right.png) no-repeat 0 0;
-		}	
-		
-	/* numeric controls */	
+#slider ul, #slider li,
+#slider2 ul, #slider2 li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
-	ol#controls{
-		margin:1em 0;
-		padding:0;
-		height:28px;	
-		}
-	ol#controls li{
-		margin:0 10px 0 0; 
-		padding:0;
-		float:left;
-		list-style:none;
-		height:28px;
-		line-height:28px;
-		}
-	ol#controls li a{
-		float:left;
-		height:28px;
-		line-height:28px;
-		border:1px solid #ccc;
-		background:#DAF3F8;
-		color:#555;
-		padding:0 10px;
-		text-decoration:none;
-		}
-	ol#controls li.current a{
-		background:#5DC9E1;
-		color:#fff;
-		}
-	ol#controls li a:focus, #prevBtn a:focus, #nextBtn a:focus{outline:none;}
-	
+#slider2 {
+    margin-top: 1em;
+}
+
+#slider li, #slider2 li {
+    /*
+        define width and height of list item (slide)
+        entire slider area will adjust according to the parameters provided here
+    */
+    width: 960px;
+    height: 198px;
+    overflow: hidden;
+}
+
+#prevBtn, #nextBtn,
+#slider1next, #slider1prev {
+    display: block;
+    width: 11px;
+    height: 17px;
+    position: absolute;
+    left: 15px;
+    top: 90px;
+    /*transform: translateY(50%);*/
+    z-index: 1000;
+}
+
+#nextBtn, #slider1next {
+    left: 935px;
+}
+
+#prevBtn a, #nextBtn a,
+#slider1next a, #slider1prev a {
+    display: block;
+    position: relative;
+    width: 11px;
+    height: 17px;
+    background: url(../images/arrow_left.png) no-repeat 0 0;
+}
+
+#nextBtn a, #slider1next a {
+    background: url(../images/arrow_right.png) no-repeat 0 0;
+}
+
+/* numeric controls */
+
+ol#controls {
+    margin: 1em 0;
+    padding: 0;
+    height: 28px;
+}
+
+ol#controls li {
+    margin: 0 10px 0 0;
+    padding: 0;
+    float: left;
+    list-style: none;
+    height: 28px;
+    line-height: 28px;
+}
+
+ol#controls li a {
+    float: left;
+    height: 28px;
+    line-height: 28px;
+    border: 1px solid #ccc;
+    background: #DAF3F8;
+    color: #555;
+    padding: 0 10px;
+    text-decoration: none;
+}
+
+ol#controls li.current a {
+    background: #5DC9E1;
+    color: #fff;
+}
+
+ol#controls li a:focus, #prevBtn a:focus, #nextBtn a:focus {
+    outline: none;
+}
+
+
 /* // Easy Slider */
