--- a/css/styles.css
+++ b/css/styles.css
@@ -244,23 +244,49 @@ body {
     line-height: 25px;
 }
 
-.portfolio {
+
+.text-section h3 {
     text-align: center;
-}
-.portfolio h3{
-    font:bold 14px IRANSans-web;
-}
-
-.portfolio ul {
-    list-style: none;
-
+    font: bold 14px IRANSans-web;
+    padding: 15px 0;
 }
 
-.portfolio li {
+.blog {
+    width: 290px;
+    float: right;
+    margin: 15px;
+}
+
+.blog img {
+    border-radius: 50%;
+    margin: 0 0 15px 15px;
     float: right;
 }
 
-.portfolio ul li a {
+.blog h4 {
     text-decoration: none;
-    font: 13px IRANSans-web;
+    font:bold 14px IRANSans-web;
+    color: #252525;
+}
+
+.blog p {
+    width: 180px;
+    height: 70px;
+    line-height: 25px;
+    font: 12px IRANSans-web;
+    color: #7f8c8d;
+    overflow: hidden;
+    text-align: justify;
+
+}
+
+.contact-us {
+    font: 18px IRANSans-web;
+    margin: 20px;
+}
+
+.contact-us img {
+    float: left;
+    margin: 20px ;
+    border-radius: 3px;
 }
